fix graph legend container on smaller widths

--- a/public/less/admin/general/dashboard.less
+++ b/public/less/admin/general/dashboard.less
@@ -53,7 +53,8 @@
 
 		.graph-legend {
 			.box-header-font;
-			display: block;
+			display: inline-block;
+			max-width: 100%;
 			position: absolute;
 			top: 2rem;
 			left: 7rem;
